style: update scrollbar button styles to hide arrows and set dimensions to zero for improved aesthetics

--- a/src/index.css
+++ b/src/index.css
@@ -260,8 +260,14 @@ body,
     height: 14px;
   }
   
-  /* Hide scrollbar buttons (up/down arrows) */
+  /* Hide scrollbar buttons (up/down arrows) - set size to 0 */
   ::-webkit-scrollbar-button {
+    width: 0;
+    height: 0;
+  }
+  
+  ::-webkit-scrollbar-button:start:increment,
+  ::-webkit-scrollbar-button:end:decrement {
     display: none;
   }
   
